--- a/day13-Animation/13土豆右下角菜单悬浮效果(链式动画).htm
+++ b/day13-Animation/13土豆右下角菜单悬浮效果(链式动画).htm
@@ -246,7 +246,7 @@
                     <a href="###"></a>
                 </li>
             </ul>
-            <h2 class="qf">千锋JS</h2>
+            <h2 class="qf">JS</h2>
         </div>
         <a class="but_show" id="but" href="#"></a>
         <div id="qf_box">
